using RestTemplate to communicate between microservices